[gd_scene load_steps=7 format=3 uid="uid://4lwv2ug5j5j6"]

[ext_resource type="Theme" uid="uid://bhs76hnulf3s4" path="res://assets/misc/main_theme.tres" id="1_21628"]
[ext_resource type="Script" path="res://scences/ui/player_card/card_menu_ui/card_menu_ui.gd" id="1_udd6g"]
[ext_resource type="Resource" uid="uid://brs0hub03o0k0" path="res://characters/machine/cards/common/laser.tres" id="2_k6r6l"]
[ext_resource type="StyleBox" uid="uid://ck3105wj7dcrn" path="res://assets/styleboxes/default_stylebox.tres" id="4_fufo6"]
[ext_resource type="PackedScene" uid="uid://n3v1mvmtakc" path="res://scences/ui/player_card/card_menu_ui/card_tooltip.tscn" id="6_opbhk"]

[sub_resource type="LabelSettings" id="LabelSettings_1ykn7"]
line_spacing = 0.0
font_size = 12

[node name="CardMenuUI" type="CenterContainer"]
offset_right = 40.0
offset_bottom = 50.4
scale = Vector2(2, 2)
size_flags_horizontal = 3
script = ExtResource("1_udd6g")
card = ExtResource("2_k6r6l")

[node name="Elements" type="Control" parent="."]
custom_minimum_size = Vector2(90, 106)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("1_21628")

[node name="Panel" type="Panel" parent="Elements"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
offset_bottom = 6.6
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("4_fufo6")

[node name="Name" type="Label" parent="Elements"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 4.0
offset_right = 4.0
offset_bottom = -17.4
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 6
text = "hiya"
label_settings = SubResource("LabelSettings_1ykn7")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Cost" type="Label" parent="Elements"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 6.0
offset_top = 16.5
offset_right = 49.0
offset_bottom = 28.5
text = "2"
vertical_alignment = 1

[node name="Type" type="Label" parent="Elements"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 4.5
offset_top = 16.5
offset_right = 47.5
offset_bottom = 28.5
vertical_alignment = 1

[node name="Desc" type="RichTextLabel" parent="Elements"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.5
offset_right = 5.0
offset_bottom = 22.1
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]Attack 3
Draw 12[/center]"

[node name="CacheCost" type="RichTextLabel" parent="Elements"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
offset_left = 59.5
offset_top = 97.5
offset_right = 91.5
offset_bottom = 133.5
bbcode_enabled = true
text = "[right][color=D9BB26]10[/color][/right]


"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="CardStatuses" type="VBoxContainer" parent="Elements"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -45.9
offset_right = 2.0
offset_bottom = 4.1
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="CardTooltip" parent="Elements" instance=ExtResource("6_opbhk")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 1
offset_left = 0.0
offset_right = 5.0
offset_bottom = 6.6
mouse_filter = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="Elements/CardTooltip" to="." method="_on_tooltip_mouse_entered"]
[connection signal="mouse_exited" from="Elements/CardTooltip" to="." method="_on_tooltip_mouse_exited"]
